--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,4 +1,9 @@
+3.0.3
+- 2023-08-03 Fix missing .trim() when verifying FIPS module name
+- 2023-08-03 Fix Diplay panics for HandshakeError with `rpk` (fixes #140)
+
 3.0.2
+- 2023-08-03 Release 3.0.2
 - 2023-08-03 Fix feature gates for fips-link-precompiled
 - 2023-07-28 Switch boring from lazy_static to once_cell
 - 2023-08-01 Clean up and remove some unsafe code from ffi callbacks
